--- a/src/views/auth/register.hbs
+++ b/src/views/auth/register.hbs
@@ -8,6 +8,7 @@
                 </h2>
             </div>
              <!-- set action and method -->
+             <!-- set names values to get it from req.body -->
             <form class="card-form" action="/auth/register" method="POST"> 
                 <div class="input">
                     <input type="text" class="input-field" placeholder="Alexander Parkinson" id="name" name="name"
