--- a/src/views/error/index.hbs
+++ b/src/views/error/index.hbs
@@ -2,6 +2,8 @@
     <div class="not-found-container">
         <h1>404</h1>
         <h2>Page Not Found</h2>
-        <p>The Page you are looking for doesn't exist or another error occurred. Go to <a href="#">Home Page.</a></p>
+        {{#each errors}}
+        <p>{{this}} <a href="/">Home Page.</a></p>
+        {{/each}}
     </div>
 </main>
