--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -26,13 +26,16 @@
             <ul>
                 <!-- Guest users and Logged users -->
                 <li><a href="#">Housing for rent</a></li>
-                <!-- Guest users -->
-                <li><a href="/auth/login">Login</a></li>
-                <li><a href="/auth/register">Register</a></li>
                 <!-- Logged users -->
+                {{#if user}}
                 <li><a href="#">Create offer</a></li>
                 <li><a href="#">Search</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="/auth/logout">Logout</a></li>
+                <!-- Guest users -->
+                {{else}}
+                <li><a href="/auth/login">Login</a></li>
+                <li><a href="/auth/register">Register</a></li>
+                {{/if}}
             </ul>
         </nav>
 
