--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -14,12 +14,13 @@
 
         <!-- In case of error, you should display div with class "errorContainer" -->
         <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-
-        <!--<div>
+        {{#if error}}
+        <div>
             <div class="errorContainer">
-                <p>Error</p>
+                <p>{{error}}</p>
             </div>
-        </div>-->
+        </div>
+        {{/if}}
 
         <nav>
             <a href="/">Home</a>
@@ -31,6 +32,7 @@
                     <li><a href="#">Create offer</a></li>
                     <li><a href="#">Search</a></li>
                     <li><a href="/auth/logout">Logout</a></li>
+                    <li><a >{{user.username}}</a></li>
                 <!-- Guest users -->
                 {{else}}
                     <li><a href="/auth/login">Login</a></li>
