--- a/src/public/css/responsive.css
+++ b/src/public/css/responsive.css
@@ -8,16 +8,12 @@
     section {
         margin: 1rem 3em;
     }
-    footer {
+    /*footer {
         display: none;
-    }
+    }*/
 }
 
-@media (max-width: 1000px) {
-    .theaters-container {
-        flex-wrap: wrap;
-        overflow-x: initial;
-    }
+@media (max-width: 980x) {
     html {
         font-size: 12px;
     }
@@ -27,7 +23,7 @@
     section {
         margin: 1rem 3em;
     }
-    footer {
+    /*footer {
         display: none;
-    }
+    }*/
 }
