--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,8 +1,9 @@
 @import url('./site.css');
 @import url('./home.css');
-@import url('./details.css');
 @import url('./responsive.css');
-@import url('./apartment.css');
-@import url('./login-register.css');
+@import url('./register-login.css');
+@import url('./all-posts.css');
 @import url('./create-edit.css');
-@import url('./search.css');
+@import url('./details.css');
+@import url('./404.css');
+@import url('./my-posts.css');
