--- a/src/views/error/index.hbs
+++ b/src/views/error/index.hbs
@@ -1,7 +1,12 @@
 <main>
-	<div class='not-found-container'>
-		<h1>404</h1>
-		<h2>Page Not Found</h2>
-		<p>The Page you are looking for doesn't exist or another error occurred. Go to <a href='/'>Home Page.</a></p>
+	<div class="full-screen">
+		<div class="con-not-found">
+			<span class="error-num">4</span>
+			<div class="eye"></div>
+			<span class="error-num">4</span>
+
+			<p class="sub-text">Something went wrong. We're <span class="italic">looking</span> to see what happened.</p>
+			<p>Go Back to <a href="#">Home</a></p>
+		</div>
 	</div>
 </main>
